<resources>
    <string name="app_name">PotPal</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="image_description">Plant Image</string>
    <string name="choose_image">Choose Image</string>
    <string name="plant_name">Plant Name</string>
    <string name="select_environment">Select Environment</string>
    <string name="select_plant_type">Select Plant Type</string>
    <string name="save_plant">Save Plant</string>

    <string-array name="environment_options">
        <item>Indoor</item>
        <item>Outdoor</item>
    </string-array>

    <string-array name="plant_type_options">
        <item>Flowering</item>
        <item>Foliage</item>
        <item>Cactus</item>
        <!-- Add more types as needed -->
    </string-array>

</resources>